--- a/package.json
+++ b/package.json
@@ -36,10 +36,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.0",
+    "@zeit/next-sass": "^1.0.1",
     "firebase": "^8.2.1",
     "next": "10.0.3",
+    "node-sass": "^5.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-hook-form": "^6.14.0",
     "react-redux": "^7.2.2",
     "redux-actions": "^2.6.5",
     "redux-logger": "^3.0.6",
